third tier thinking

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -20,6 +20,16 @@
     <%= f.label :amount %>
     <%= f.number_field :amount %>
   </div>
+  
+  <div class="field">
+    <%= f.label :avatar %>
+    <%= f.file_field :avatar %>        
+  </div>
+  
+  <div class="field">
+    <%= f.label :city %><br>
+    <%= f.collection_select :city_id, City.all, :id, :name %>
+  </div>
 
   <div class="actions">
     <%= f.submit %>
